Revert "Revert "Revert "add Will's edits and fix send button on mobile font color"""
This reverts commit 0cdf0dd936887e81e6649e31656b23227a9174c4.

--- a/src/Hero/hero.css
+++ b/src/Hero/hero.css
@@ -554,10 +554,6 @@
   
   }
 
-.hero-p-bold{
-  font-family: "Lato-SemiBold";  
-}
-
   .hero-logo{
     justify-content: right;
     height: 5.5vh;
